Changes for 1.7.3

 - [ZBX-1369] make more strings translatable (Richlv)
 - [ZBX-974] recompressed png images with pngcrush. max size reduction 28%, average reduction 10% (Richlv)
 - [ZBX-1373] fixed auto discovery by proxy module (Sasha)
 - [ZBX-1368] fixed evaluating of "<=" operator in Uptime/Downtime Action condition (Dmitry)
 - [ZBX-1369] make time units translatable in graphs; patch by alixen (Richlv)
 - [ZBXNEXT-146] added support of numeric values with plus sign (Sasha)
 - [ZBX-1358] make more graph strings translatable; patch by alixen (Richlv)
 - [ZBX-1346] fix Timeout directive description in server and proxy configuration files (Richlv)
 - [DEV-436] improved display of ZABBIX/SNMP/IPMI agents availability information in hosts configuration screen (Sasha, Vedmak)
 - [ZBX-1337] rename maintenance types for clarity (Richlv)
 - [DEV-333] fixed processing of not supported active and trapper items (Sasha)
 - [DEV-333,ZBX-1254] fixed queue screen with separated availability of SNMP,IPMI and others items (Sasha)
 - [ZBX-1324] replaced user visible string ZABBIX with Zabbix (Alexei, Richlv)
 - [DEV-137] added file CREDITS (Alexei)
 - [DEV-333] fixed possible server crash while processing remote commands (Dmitry)
 - [ZBX-998] modified PostgreSQL schema for support of uint64 history values (Sasha)
 - [ZBX-1317] fixed resource type for maintenance in audit (Vedmak)
 - [DEV-369] added support of file log rotation, item's "log[]" parameter "file" now has a format of "[path][regexp]" (Dmitry)
 - [ZBX-1310] fixed template creating form (Vedmak)
 - [ZBX-1312] removed huge, unused Japanese fonts (Richlv)
 - [ZBX-1272] server name is now shown in page title too (Vedmak)
 - [DEV-137] PDF manual replaced by a README file with a link to on-line documentation (Alexei)
 - [ZBX-1302] fixed references to missing items.nextcheck in the GUI (Alexei)
 - [ZBX-1230] IP adresss is made a default selection in host details form (Alexei)